# flutter-cpp-ssh

./: .gitignore  README.md  pubspec.yaml
cpp/: CMakeLists.txt  search_engine.cpp  search_engine.h
lib/: main.dart  search_ffi.dart  search_service.dart
lib/app/: ssh_manager_app.dart
lib/models/: search_result.dart  ssh_connection.dart  terminal_line.dart
lib/providers/: connection_provider.dart
lib/screens/: connection_list_screen.dart  nano_editor_screen.dart  search_screen.dart  terminal_screen.dart
lib/screens/dialogs/: connection_dialog.dart
lib/services/: ssh_service.dart  storage_service.dart
lib/utils/: constants.dart  terminal_cleaner.dart
lib/widgets/: terminal_line_builder.dart
